@@ -122,10 +122,10 @@ class LoadingStages:
 
     TAGS = LoadingStage("tag loading phase", "stage:tag:group", "stage:tag:load")
     BLOCKS = LoadingStage("block loading phase", "stage:block:factory:prepare",
-                          "stage:block:factory_usage", "stage:block:load", "stage:block:overwrite",
-                          "stage:block:block_config")
+                          "stage:block:factory_usage", "stage:block:factory:finish", "stage:block:load",
+                          "stage:block:overwrite", "stage:block:block_config")
     ITEMS = LoadingStage("item loading phase", "stage:item:factory:prepare", "stage:item:factory_usage",
-                         "stage:item:load", "stage:item:overwrite")
+                         "stage:item:factory:finish", "stage:item:load", "stage:item:overwrite")
     LANGUAGE = LoadingStage("language file loading", "stage:language")
     RECIPE = LoadingStage("recipe loading phase", "stage:recipes", "stage:recipe:groups", "stage:recipe:bake")
     INVENTORIES = LoadingStage("inventory loading phase", "stage:inventories:pre", "stage:inventories",
