@@ -9,6 +9,7 @@ changelog of master-branch:
     - added new mod.json file version
     - added @globals.modloader(<modname>, <eventname>) annotation
     - improved mod loading stage calling
+    - new loading events: "stage:block:factory:finish" and "stage:item:factory:finish"
 
     planned:
         - change how mod.json's work, rework event loading annotations [@G.modloader(<modname>) -> event by func name?
